--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flag: ^3.2.2
+  flex_color_picker: ^1.1.5
+  flutter_switch: ^0.2.2
+  
+
 
 dev_dependencies:
   flutter_test:
