--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   flag: ^3.2.2
   flex_color_picker: ^1.1.5
   flutter_switch: ^0.2.2
-  flutter_dialpad_plus: ^0.2.1
+  
+  flutter_swiper: ^1.1.6
   
 
 
