--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  flag: ^3.2.2
+  
   flex_color_picker: ^1.1.5
   flutter_switch: ^0.2.2
+  
+  flag: ^5.0.0-nullsafety
+  
+  
  
   
 
@@ -40,6 +44,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+   
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
