--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   progress_dialog: ^1.2.4
   http:
   cached_network_image: ^2.5.0
+  stripe_payment: ^1.0.6
+  provider: ^4.3.3
+  shared_preferences: ^0.5.6
+  flutter_ringtone_player: ^2.0.0
   
   
   
