--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   stripe_payment: ^1.0.6
   provider: ^4.3.3
   shared_preferences: ^0.5.6
+  stop_watch_timer: ^0.7.0
  # flutter_ringtone_player: ^2.0.0
   
   
