--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  intl:
   
   flex_color_picker: ^1.1.5
   flutter_switch: ^0.2.2
@@ -43,6 +44,9 @@ dependencies:
   provider: ^4.3.3
   shared_preferences: ^0.5.6
   stop_watch_timer: ^0.7.0
+  launch_review: ^1.0.1
+  url_launcher: ^6.0.6
+
  # flutter_ringtone_player: ^2.0.0
   
   
